добавил фильтрацию аномалий